--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ class HexBoard {
       const [cx,cy] = this.cell_center(x,y);
       const color = this.filled.get(toKey(x,y)) || "white";
       const isFilled = this.filled.has(toKey(x,y));
-      drawHex(ctx, cx, cy, this.radius, color, null, isFilled ? 0.3 : 1.0);
+      drawHex(ctx, cx, cy, this.radius, color, null);
       this.hexCenters.set(toKey(x,y), [cx,cy]);
     }
   }
