--- a/index.html
+++ b/index.html
@@ -109,7 +109,15 @@
       <div id="shapeList"></div>
     </aside>
   </main>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NTX1YS21Y0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-NTX1YS21Y0');
+</script>
 <script>
 /* ================================
  *  Palette (40 colors)
