--- a/index.html
+++ b/index.html
@@ -532,42 +532,42 @@ class App {
   }
 
   on_key(event) {
-    const key = event.key.toLowerCase();
-    if (['arrowleft','arrowright','arrowup','arrowdown','r'].includes(key)) event.preventDefault();
-    if (this.board.filled.size === 0) return;
+    // const key = event.key.toLowerCase();
+    // if (['arrowleft','arrowright','arrowup','arrowdown','r'].includes(key)) event.preventDefault();
+    // if (this.board.filled.size === 0) return;
 
-    if (!this.current_shape_coords.length) {
-      this.current_shape_coords = Array.from(this.board.filled.keys(), fromKey);
-      this.current_shape_color = this.board.filled.values().next().value || "black";
-      this.current_base = get_pivot(this.current_shape_coords);
-    }
+    // if (!this.current_shape_coords.length) {
+    //   this.current_shape_coords = Array.from(this.board.filled.keys(), fromKey);
+    //   this.current_shape_color = this.board.filled.values().next().value || "black";
+    //   this.current_base = get_pivot(this.current_shape_coords);
+    // }
 
-    let dx = 0, dy = 0;
-    if (key === 'arrowleft') dx = -1;
-    else if (key === 'arrowright') dx = 1;
-    else if (key === 'arrowup') dy = 1;
-    else if (key === 'arrowdown') dy = -1;
-    else if (key === 'r') {
-      const rotated = rotate_shape(this.current_shape_coords, 1, this.board.width, this.board.height);
-      if (rotated) {
-        this.board.filled.clear();
-        for (const c of rotated) this.board.filled.set(toKey(c[0], c[1]), this.current_shape_color);
-        this.current_shape_coords = rotated;
-      }
-      this.redraw();
-      return;
-    }
+    // let dx = 0, dy = 0;
+    // if (key === 'arrowleft') dx = -1;
+    // else if (key === 'arrowright') dx = 1;
+    // else if (key === 'arrowup') dy = 1;
+    // else if (key === 'arrowdown') dy = -1;
+    // else if (key === 'r') {
+    //   const rotated = rotate_shape(this.current_shape_coords, 1, this.board.width, this.board.height);
+    //   if (rotated) {
+    //     this.board.filled.clear();
+    //     for (const c of rotated) this.board.filled.set(toKey(c[0], c[1]), this.current_shape_color);
+    //     this.current_shape_coords = rotated;
+    //   }
+    //   this.redraw();
+    //   return;
+    // }
 
-    if (dx !== 0 || dy !== 0) {
-      const moved = move_shape(this.current_shape_coords, dx, dy, this.board.width, this.board.height);
-      if (moved) {
-        for (const c of this.current_shape_coords) this.board.filled.delete(toKey(c[0], c[1]));
-        this.current_shape_coords = moved;
-        this.current_base = [this.current_base[0] + dx, this.current_base[1] + dy];
-        for (const c of moved) this.board.filled.set(toKey(c[0], c[1]), this.current_shape_color);
-        this.redraw();
-      }
-    }
+    // if (dx !== 0 || dy !== 0) {
+    //   const moved = move_shape(this.current_shape_coords, dx, dy, this.board.width, this.board.height);
+    //   if (moved) {
+    //     for (const c of this.current_shape_coords) this.board.filled.delete(toKey(c[0], c[1]));
+    //     this.current_shape_coords = moved;
+    //     this.current_base = [this.current_base[0] + dx, this.current_base[1] + dy];
+    //     for (const c of moved) this.board.filled.set(toKey(c[0], c[1]), this.current_shape_color);
+    //     this.redraw();
+    //   }
+    // }
   }
 
   add_shape() {
